generated/checkers/gen/AllGen-Buffer-Overflow-c6087b82a9146826564a55c5ca0164cac40348f5/build_logs/syntax-repair-03/build_stderr_2.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In function ‘bool {anonymous}::isAssignmentStmtForRegion(const clang::DeclStmt*, const clang::ento::MemRegion*, const clang::LocationContext*, const clang::ento::CheckerContext&)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:55:43: error: ‘const class clang::ento::ProgramState’ has no member named ‘getRegionManager’; did you mean ‘getSymbolManager’?
   55 |   MemRegionManager &MRMgr = C.getState()->getRegionManager();
      |                                           ^~~~~~~~~~~~~~~~
      |                                           getSymbolManager
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
